[package]
name = "burn-research"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Burn Core (Tanpa 'train' agar tidak ada SQLite)
burn = { version = "0.15.0", features = ["wgpu"] }

# Backend
burn-wgpu = { version = "0.15.0" }
burn-ndarray = { version = "0.15.0" } # Untuk debug CPU

# Utils
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }

# Config Hemat Ukuran
[profile.release]
lto = true
opt-level = 'z'
