[package]
name = "burn-research"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# --- BURN (Tetap 0.15.0) ---
burn = { version = "0.15.0", features = ["wgpu"] }
burn-wgpu = { version = "0.15.0" }
burn-ndarray = { version = "0.15.0" }

# --- UTILS ---
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }

# --- PERBAIKAN (KUNCI MATI BINCODE) ---
# Kita paksa pakai rc.3 karena di sinilah fungsi itu ada.
# Kita juga aktifkan fitur "serde" secara eksplisit.
bincode = { version = "=2.0.0-rc.3", features = ["serde"] }

# --- PERTAHANAN TAMBAHAN (Biar aman dari error sebelumnya) ---
getrandom = { version = "=0.2.17", features = ["js"] }
