[package]
name = "burn-research"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# --- BURN v0.20 (Terbaru) ---
burn = { version = "0.20.0", features = ["wgpu"] }
burn-wgpu = { version = "0.20.0" }
burn-ndarray = { version = "0.20.0" }

# --- UTILS ---
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }

# --- GETRANDOM v0.3 (Dengan fitur wasm_js) ---
getrandom = { version = "0.3", features = ["wasm_js"] }

# --- BINCODE (Versi Stabil untuk Burn 0.20) ---
bincode = { version = "2.0.1", features = ["serde"] }